--- a/apps/tournament_activity/backend/requirements.txt
+++ b/apps/tournament_activity/backend/requirements.txt
@@ -4,4 +4,8 @@ supabase>=2.22.0
 python-dotenv>=1.1.0
 pydantic>=2.10.0
 httpx>=0.28.0
+openpyxl>=3.1.5
+python-dateutil>=2.8.2
+google-api-python-client>=2.100.0
+google-auth>=2.23.0
 
